[tool.poetry]
name = "repl_python3_NightyLoo"
version = "0.1.0"
description = ""
authors = ["Simtimus <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.3"
discord = "^1.7.3"
Flask = "^2.0.2"
discord-components = "^2.1.2"
mysql-connector-python = "^8.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
